Started dark mode, issue with MUI components, looks bad

--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -4,9 +4,10 @@
     justify-content: center;
     width: 500px;
     padding: 30px 60px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.2);
+    border-radius: 10px;
     margin-left: 40px;
+    background-color: rgb(36, 36, 36);
     & h1 {
         border-bottom: 5px solid rgba(0, 78, 0, 0.39);
     }
