--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 $green: rgba(0, 78, 0, 0.39);
+$textWhite: rgba(255,255,255,0.87);
 
 * {
 	box-sizing: border-box;
@@ -14,6 +15,7 @@ html {
 	width: 100vw;
 	height: 100vh;
 	position: relative;
+	background-color: black;
 }
 
 input {
